--- a/src/TrailerScope.Contracts/TrailerScope.Contracts.csproj
+++ b/src/TrailerScope.Contracts/TrailerScope.Contracts.csproj
@@ -5,11 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="IMDbApiLib" Version="1.6.3.1" />
+    <ProjectReference Include="..\TrailerScope.Domain\TrailerScope.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TrailerScope.Contracts\TrailerScope.Contracts.csproj" />
+    <PackageReference Include="FluentResults" Version="2.5.0" />
   </ItemGroup>
 
 </Project>
