wip : added blazor wasm &  movie search controls

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,6 +6,9 @@
         {
             "label": "build",
             "command": "dotnet",
+            
+            // for linux
+            //"command": "~/dotnet/dotnet",
             "type": "shell",
             "args": [
                 "build",
