--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,14 @@
             "name": "Launch and Debug Standalone Blazor WebAssembly App",
             "type": "blazorwasm",
             "request": "launch",
-            "cwd": "${workspaceFolder}/src/TrailerScopeBlazorWasm/Server"
+            "cwd": "${workspaceFolder}/src/TrailerScopeBlazorWasm/Server",
+            "browser": "edge",
+
+        },
+        {
+            "type": "blazorwasm",
+            "request": "attach",
+            "name": "Attach to Existing Blazor WebAssembly Application"
         }
     ]
 }
