--- a/src/TrailerScopeBlazorWasm/Server/Properties/launchSettings.json
+++ b/src/TrailerScopeBlazorWasm/Server/Properties/launchSettings.json
@@ -25,6 +25,19 @@
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development"
         }
+      },
+      "Default": {
+        "commandName": "Project",
+        "executablePath": "dotnet",
+        "commandLineArgs": "watch run",
+        "workingDirectory": "$(ProjectDir)",
+        "launchBrowser": true,
+        "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
+        "dotnetRunMessages": "true",
+        "applicationUrl": "https://localhost:5001;http://localhost:5000",
+        "environmentVariables": {
+          "ASPNETCORE_ENVIRONMENT": "Development"
+        }
       }
     }
   }
