Wip : creating litedb caching service and stuff

--- a/src/TrailerScopeBlazorWasm/Server/appsettings.json
+++ b/src/TrailerScopeBlazorWasm/Server/appsettings.json
@@ -1,20 +1,24 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "IdentityServer": {
-    "Clients": {
-      "TrailerScopeBlazorWasm.Client": {
-        "Profile": "IdentityServerSPA"
-      }
-    }
-  },
-"AllowedHosts": "*"
+	"ConnectionStrings": {
+		"DefaultConnection": "DataSource=app.db"
+	},
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft": "Warning",
+			"Microsoft.Hosting.Lifetime": "Information"
+		}
+	},
+	"IdentityServer": {
+		"Clients": {
+			"TrailerScopeBlazorWasm.Client": {
+				"Profile": "IdentityServerSPA"
+			}
+		}
+	},
+	"AllowedHosts": "*",
+	"AppSettings": {
+		// "LiteDbConnectionString": ""  // set this one from enviroment !!!
+		//"ImdbApiKey": "12345" // set this one from enviroment !!!
+	}
 }
