--- a/src/TrailerScopeBlazorWasm/Server/TrailerScopeBlazorWasm.Server.csproj
+++ b/src/TrailerScopeBlazorWasm/Server/TrailerScopeBlazorWasm.Server.csproj
@@ -6,16 +6,23 @@
 
 
     <OutputType>Exe</OutputType>
+
+
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
 
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="5.0.9" />
+    <PackageReference Include="Serilog" Version="2.10.0" />
+    <PackageReference Include="Serilog.Extensions.Hosting" Version="4.1.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\tests\TrailerScope.Services.ImdbApiServiceUnitTest\TrailerScope.Services.ImdbApiServiceUnitTest.csproj" />
+    <ProjectReference Include="..\..\TrailerScope.Services.LiteDb\TrailerScope.Services.LiteDb.csproj" />
     <ProjectReference Include="..\Client\TrailerScopeBlazorWasm.Client.csproj" />
     <ProjectReference Include="..\Shared\TrailerScopeBlazorWasm.Shared.csproj" />
   </ItemGroup>
