--- a/src/TrailerScopeBlazorWasm/Shared/TrailerScopeBlazorWasm.Shared.csproj
+++ b/src/TrailerScopeBlazorWasm/Shared/TrailerScopeBlazorWasm.Shared.csproj
@@ -5,6 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\TrailerScope.Domain\TrailerScope.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <SupportedPlatform Include="browser" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Movies\" />
   </ItemGroup>
 </Project>
