--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "program": "${workspaceFolder}/src/TrailerScopeBlazorWasm/Server/bin/Debug/net5.0/TrailerScopeBlazorWasm.Server.dll",
             "args": [],
             //"cwd": "${workspaceFolder}",
-            "cwd": "{workspaceFolder}",
+             "cwd": "${workspaceFolder}/src/TrailerScopeBlazorWasm/Server/",
             "stopAtEntry": false,
             "serverReadyAction": {
                 "action": "openExternally",
