--- a/src/TrailerScope.Services.ImdbApiService/TrailerScope.Services.ImdbApiService.csproj
+++ b/src/TrailerScope.Services.ImdbApiService/TrailerScope.Services.ImdbApiService.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="IMDbApiLib" Version="1.6.3.1" />
+    <PackageReference Include="Mapster" Version="7.2.0" />
   </ItemGroup>
 
   <ItemGroup>
