--- a/tests/TrailerScope.Services.ImdbApiServiceTest/TrailerScope.Services.ImdbApiServiceTest.csproj
+++ b/tests/TrailerScope.Services.ImdbApiServiceTest/TrailerScope.Services.ImdbApiServiceTest.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <RootNamespace>TrailerScope.Services.ImdbApiServiceUnitTest</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
